--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -26,3 +26,11 @@
   background-color: #EEEEEE;
   padding: 10px;
 }
+/*RE-USE SNIPPETS*/
+.addToDB{
+  margin: 0 auto;
+  width: 60%;
+  max-width: 500px;
+  background-color: #EEEEEE;
+  padding: 10px;
+}
