logon backend - inital

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1,6 +1,6 @@
 /*COMMON*/
 .header{
-  background-color: #00BCD4;
+  background-color: #0277BD;
   width: 100%;
   height: 50px;
   top: 0 px;
@@ -15,6 +15,9 @@
 .container-fluid{
   padding-top: 25px;
 }
+body{
+  background-color:#EEEEEE;
+}
 
 /*HOME PAGE*/
 
@@ -23,15 +26,21 @@
   margin: 0 auto;
   width: 60%;
   max-width: 450px;
-  background-color: #EEEEEE;
+  background-color: #fff;
   padding: 10px;
+}
+@media screen and (max-width: 600px) {
+    .loginForm {
+        width: 90%;
+        max-width: none;
+    }
 }
 /*RE-USE SNIPPETS*/
 .addToDB{
   margin: 0 auto;
   width: 60%;
   max-width: 500px;
-  background-color: #EEEEEE ;
+  background-color: #fff;
   padding: 10px;
 }
 
@@ -57,7 +66,4 @@
 .toggleButtonInactive:hover{
   background-color: #424242;
   color: white;
-}
-.btn{
-
 }
