--- a/views/home.ejs
+++ b/views/home.ejs
@@ -41,7 +41,7 @@
 
   <div id="loginContainer">
     <div class="container-fluid">
-      <h1>Welcome to the app</h1>
+      <h1>You have arrived at pupper station</h1>
       <div class="panel panel-default">
         <div class="panel-body">
           <a href="/login"><h3>Login</h3></a>
