--- a/views/viewDogs.ejs
+++ b/views/viewDogs.ejs
@@ -60,6 +60,53 @@
         </div>
       </div>
     </form>
+    <form>
+      <div class="form-group">
+        <div class="row">
+          <div class="col-md-2">
+                <button type="button" class="btn btn-success" data-toggle="modal"
+                data-target="#addDoggo">Add Doggo</button>
+          </div>
+        </div>
+      </div>
+    </form>
+    <!--add doggo modal-->
+    <div id="addDoggo" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Add Doggo</h4>
+      </div>
+      <div class="modal-body">
+        <form>
+                <div class="form-group">
+                  <label for="name">Name:</label>
+                  <input type="text" class="form-control" id="name">
+                </div>
+                  <div class="form-group">
+                    <label for="breed">Breed:</label>
+                    <input type="text" class="form-control" id="breed">
+                  </div>
+                <div class="form-group">
+                  <label for="age">Age:</label>
+                  <input type="number" class="form-control" id="age">
+                </div>
+                <div class="form-group">
+                  <label for="gender">Gender:</label><br/>
+                  <input type="radio" name="gender" value="male"> Male<br>
+                  <input type="radio" name="gender" value="female"> Female<br>
+                </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="submit" class="btn btn-default" data-dismiss="modal">Add Doggo</button>
+      </div>
+    </div>
+
+  </div>
+</div>
 
     <div class="row">
     <% data.forEach(function(item){ %>
