--- a/views/viewFosters.ejs
+++ b/views/viewFosters.ejs
@@ -67,7 +67,7 @@
         <div class="panel panel-default">
           <div class="panel-body tile fosterPanel">
             <p class="idHolder" style="display:none;"><%= item.username %></p>
-            <h2 class="name"><%= item.name %></h2>
+            <h2 class="name"><%= item.username %></h2>
             <h4 class="address"><%= item.address %></h4>
             <h4 class="phone"><%= item.phone %></h4>
           </div>
