--- a/views/director.ejs
+++ b/views/director.ejs
@@ -44,7 +44,7 @@
 
     <div class="row">
       <div class="col-md-12">
-          <h1>Director</h1><br/>
+          <h1 class="pageHeading">Director</h1><br/>
       </div>
     </div>
 
