--- a/views/foster.ejs
+++ b/views/foster.ejs
@@ -44,7 +44,7 @@
 
     <div class="row">
       <div class="col-md-12">
-          <h1>Foster</h1><br/>
+          <h1 class="pageHeading">Foster</h1><br/>
       </div>
     </div>
 
