--- a/views/viewFosters.ejs
+++ b/views/viewFosters.ejs
@@ -44,7 +44,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h1>View Fosters</h1><br/>
+        <h1 class="pageHeading">View Fosters</h1><br/>
       </div>
     </div>
 
