--- a/views/viewDogs.ejs
+++ b/views/viewDogs.ejs
@@ -11,6 +11,24 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="css/main.css">
   <script src="js/viewDogs.js"></script>
+<script type="text/javascipt">
+$.ajax({
+            type: "POST",
+            url: "/addDog",
+            data: { name: name,
+                    breed: breed,
+                    age: age,
+                    gender:gender
+             },
+            success: function(data) {
+              this.location.reload(true);
+
+            },
+            error: function(jqXHR, textStatus, err) {
+                alert('text status '+textStatus+', err '+err)
+            }
+        });
+</script>
 </head>
 <body>
 
@@ -80,31 +98,33 @@
         <h4 class="modal-title">Add Doggo</h4>
       </div>
       <div class="modal-body">
-        <form>
+        <form action="/addDog" method="POST">
                 <div class="form-group">
                   <label for="name">Name:</label>
-                  <input type="text" class="form-control" id="name">
+                  <input type="text" class="form-control" id="name" name="name">
                 </div>
                   <div class="form-group">
                     <label for="breed">Breed:</label>
-                    <input type="text" class="form-control" id="breed">
+                    <input type="text" class="form-control" id="breed" name="breed">
                   </div>
                 <div class="form-group">
+                  <div class="col-2">
                   <label for="age">Age:</label>
-                  <input type="number" class="form-control" id="age">
+                  <input type="number" class="form-control" id="age" name="age">
+                </div>
                 </div>
                 <div class="form-group">
                   <label for="gender">Gender:</label><br/>
                   <input type="radio" name="gender" value="male"> Male<br>
                   <input type="radio" name="gender" value="female"> Female<br>
                 </div>
+          <button type="submit" class="btn btn-default">Add Doggo</button>
         </form>
       </div>
       <div class="modal-footer">
-        <button type="submit" class="btn btn-default" data-dismiss="modal">Add Doggo</button>
+<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
       </div>
     </div>
-
   </div>
 </div>
 
