--- a/views/dog.ejs
+++ b/views/dog.ejs
@@ -42,9 +42,10 @@
   <div id="viewDogContainer">
     <div class="container-fluid">
 
+      <% data.dog.forEach(function(item){ %>
     <div class="row">
       <div class="col-md-12">
-          <h1 class="pageHeading"><%= data.dog.name %></h1><br/>
+          <h1 class="pageHeading"><%= item.name %></h1><br/>
       </div>
     </div>
 
@@ -55,10 +56,10 @@
               <img src="https://i.imgur.com/CgSj6pu.jpg" style="width:55%; margin:0 auto; display:block; border-radius: 50%;">
               <center>
               <h1> About: </h1>
-              <h4>Breed: <%= data.dog.breed %> </h4>
-              <h4>Age: <%= data.dog.age %> years </h4>
-              <h4>Gender: <%= data.dog.gender %> </h4>
-              <h4>Foster Owner: <%= data.dog.foster %> </h4>
+              <h4>Breed: <%= item.breed %> </h4>
+              <h4>Age: <%= item.age %> years </h4>
+              <h4>Gender: <%= item.gender %> </h4>
+              <h4>Foster Owner: <%= item.fosterID %> </h4>
               <div class="col-md-12">
                 <button type="button" id="postEdit" class="btn btn-default toggleButtonActive logSubmit">Edit <%= data.dog.name %> </button>
               </div>
@@ -66,7 +67,7 @@
           </div>
         </div>
       </div>
-
+      <% }); %>
         <div class="col-md-6" style="max-height:79vh; overflow-y:auto;">
           <div class="panel panel-default">
             <div class="panel-body">
@@ -86,9 +87,9 @@
           <% data.updates.forEach(function(item){ %>
           <div class="panel panel-default">
             <div class="panel-body">
-                <h3> <%= item.type %>: </h3>
+                <h3> <%= item.recordType %>: </h3>
                 <h4>Date: <%= item.date %> </h4>
-                <h4>Details: <%= item.desc %> </h4>
+                <h4>Details: <%= item.updateDesc %> </h4>
             </div>
           </div>
           <% }); %>
@@ -133,6 +134,44 @@
     </div>
   </div>
 
+  <!--add doggo modal-->
+  <div id="postEditModal" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title">Edit Doggo</h4>
+        </div>
+          <div class="modal-body">
+            <form action="/addDog" method="POST">
+                    <div class="form-group">
+                      <label for="name">Name:</label>
+                      <input type="text" class="form-control" id="name" name="name">
+                    </div>
+                      <div class="form-group">
+                        <label for="breed">Breed:</label>
+                        <input type="text" class="form-control" id="breed" name="breed">
+                      </div>
+                    <div class="form-group">
+                      <div class="col-2">
+                      <label for="age">Age:</label>
+                      <input type="number" class="form-control" id="age" name="age">
+                    </div>
+                    </div>
+                    <div class="form-group">
+                      <label for="gender">Gender:</label><br/>
+                      <input type="radio" name="gender" value="male"> Male<br>
+                      <input type="radio" name="gender" value="female"> Female<br>
+                    </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button type="submit" id="submitEdit" class="btn btn-default toggleButtonActive logSubmit">Submit Edit</button>
+        </div>
+      </div>
+    </div>
+</div>
 
   <div class="footer">
 
