--- a/views/viewDogs.ejs
+++ b/views/viewDogs.ejs
@@ -21,7 +21,9 @@ $.ajax({
                     gender:gender
              },
             success: function(data) {
-                          },
+              this.location.reload(true);
+
+            },
             error: function(jqXHR, textStatus, err) {
                 alert('text status '+textStatus+', err '+err)
             }
