--- a/views/dog.ejs
+++ b/views/dog.ejs
@@ -44,7 +44,7 @@
 
     <div class="row">
       <div class="col-md-12">
-          <h1 class="pageHeading"><%= data.dog.name %></h1><br/>
+          <h1 class="pageHeading"><% data.forEach(function(item){ %><%= item.name %><% }); %></h1><br/>
       </div>
     </div>
 
@@ -55,12 +55,14 @@
               <img src="https://i.imgur.com/CgSj6pu.jpg" style="width:55%; margin:0 auto; display:block; border-radius: 50%;">
               <center>
               <h1> About: </h1>
-              <h4>Breed: <%= data.dog.breed %> </h4>
-              <h4>Age: <%= data.dog.age %> years </h4>
-              <h4>Gender: <%= data.dog.gender %> </h4>
-              <h4>Foster Owner: <%= data.dog.foster %> </h4>
+              <% data.forEach(function(item){ %>
+              <h4>Breed: <%= item.breed %> </h4>
+              <h4>Age: <%= item.age %> years </h4>
+              <h4>Gender: <%= item.gender %> </h4>
+              <h4>Foster Owner: <%= item.fosterID %> </h4>
+              <% }); %>
               <div class="col-md-12">
-                <button type="button" id="postEdit" class="btn btn-default toggleButtonActive logSubmit">Edit <%= data.dog.name %> </button>
+                <button type="button" id="postEdit" class="btn btn-default toggleButtonActive logSubmit">Edit <%= data.name %> </button>
               </div>
               </center>
           </div>
@@ -83,7 +85,7 @@
           </div>
 
 
-          <% data.updates.forEach(function(item){ %>
+          <% data.forEach(function(item){ %>
           <div class="panel panel-default">
             <div class="panel-body">
                 <h3> <%= item.type %>: </h3>
