--- a/views/dog.ejs
+++ b/views/dog.ejs
@@ -144,7 +144,7 @@
           <h4 class="modal-title">Edit Doggo</h4>
         </div>
           <div class="modal-body">
-            <form action="/addDog" method="POST">
+            <form action="/editDoggo" method="POST">
                     <div class="form-group">
                       <label for="name">Name:</label>
                       <input type="text" class="form-control" id="name" name="name">
