--- a/views/dog.ejs
+++ b/views/dog.ejs
@@ -11,6 +11,31 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="../js/dog.js"></script>
   <link rel="stylesheet" href="../css/main.css">
+  <script type="text/javascript">
+  $(document).ready(function(){
+    var dogIdString = window.location.pathname;
+      var dogIdPos = dogIdString.indexOf("dog/") + 4;
+      dogID = dogIdString.substring(dogIdPos,dogIdString.length);
+    $.ajax({
+                type: "POST",
+                url: "/editDoggo",
+                data: {
+                        id: dogID,
+                        name: name,
+                        breed: breed,
+                        age: age,
+                        gender: gender
+                 },
+                success: function(data) {
+                  this.location.reload(true);
+                },
+                error: function(jqXHR, textStatus, err) {
+                    alert('text status '+textStatus+', err '+err)
+                }
+            });
+  });
+
+  </script>
 </head>
 <body id="bckFix" style="background-color:#F5F5F5">
 
@@ -161,13 +186,14 @@
                     </div>
                     <div class="form-group">
                       <label for="gender">Gender:</label><br/>
-                      <input type="radio" name="gender" value="male"> Male<br>
-                      <input type="radio" name="gender" value="female"> Female<br>
+                      <input type="radio" name="gender" value="male"> Male<br/>
+                      <input type="radio" name="gender" value="female"> Female<br/>
                     </div>
+                    <button type="submit" id="submitEdit" class="btn btn-default toggleButtonActive logSubmit">Submit Edit</button>
             </form>
           </div>
           <div class="modal-footer">
-            <button type="submit" id="submitEdit" class="btn btn-default toggleButtonActive logSubmit">Submit Edit</button>
+
         </div>
       </div>
     </div>
@@ -176,6 +202,5 @@
   <div class="footer">
 
   </div>
-
 </body>
 </html>
