--- a/views/viewDirectors.ejs
+++ b/views/viewDirectors.ejs
@@ -60,6 +60,62 @@
         </div>
       </div>
     </form>
+    <form>
+      <div class="form-group">
+        <div class="row">
+          <div class="col-md-2">
+                <button type="button" class="btn btn-success" data-toggle="modal"
+                data-target="#addDirector">Add Director</button>
+          </div>
+        </div>
+      </div>
+    </form>
+    <!--add doggo modal-->
+    <div id="addDirector" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Add Director</h4>
+      </div>
+      <div class="modal-body">
+        <form action="/addDirector" method="POST">
+                <div class="form-group">
+                  <label for="name">First Name:</label>
+                  <input type="text" class="form-control" id="fName" name="fName">
+                </div>
+                  <div class="form-group">
+                    <label for="breed">Last Name:</label>
+                    <input type="text" class="form-control" id="lName" name="lName">
+                  </div>
+                <div class="form-group">
+                  <div class="col-2">
+                  <label for="age">email:</label>
+                  <input type="email" class="form-control" id="email" name="email">
+                </div>
+                </div>
+                <div class="form-group">
+                  <label for="phone">Phone:</label>
+                  <input type="phone" class="form-control" id="phone" name="phone">
+                </div>
+                <div class="form-group">
+                  <label for="address">Address:</label>
+                  <input type="text" class="form-control" id="phone" name="address">
+                </div>
+                <div class="form-group">
+                  <label for="Password">Password:</label>
+                  <input type="pwd" class="form-control" id="password" name="password">
+                </div>
+          <button type="submit" class="btn btn-success">Add Director</button>
+        </form>
+      </div>
+      <div class="modal-footer">
+<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
 
     <div class="row">
     <% data.forEach(function(item){ %>
