--- a/views/viewDogs.ejs
+++ b/views/viewDogs.ejs
@@ -82,7 +82,7 @@ $.ajax({
       <div class="form-group">
         <div class="row">
           <div class="col-md-2">
-                <button type="button" class="btn btn-success addButton" data-toggle="modal"
+                <button type="button" class="btn btn-success" data-toggle="modal"
                 data-target="#addDoggo">Add Doggo</button>
           </div>
         </div>
@@ -134,7 +134,6 @@ $.ajax({
         <div class="panel panel-default">
           <div class="panel-body tile dogPanel">
             <p class="idHolder" style="display:none;"><%= item.id %></p>
-            <img src =<%= item.img %> style="width:15%; border-radius: 50%;">
             <h2 class="name"><%= item.name %></h2>
             <h4 class="address"><%= item.age %></h4>
             <h4 class="phone"><%= item.breed %></h4>
