--- a/views/viewDirectors.ejs
+++ b/views/viewDirectors.ejs
@@ -64,7 +64,7 @@
       <div class="form-group">
         <div class="row">
           <div class="col-md-2">
-                <button type="button" class="btn btn-success addButton" data-toggle="modal"
+                <button type="button" class="btn btn-success" data-toggle="modal"
                 data-target="#addDirector">Add Director</button>
           </div>
         </div>
