--- a/views/viewFosters.ejs
+++ b/views/viewFosters.ejs
@@ -61,6 +61,17 @@
       </div>
     </form>
 
+    <form>
+      <div class="form-group">
+        <div class="row">
+          <div class="col-md-2">
+                <button type="button" class="btn btn-success addButton" data-toggle="modal"
+                data-target="#addFoster">Add Foster</button>
+          </div>
+        </div>
+      </div>
+    </form>
+
     <div class="row">
     <% data.forEach(function(item){ %>
       <div class="col-md-4">
