--- a/views/dog.ejs
+++ b/views/dog.ejs
@@ -53,7 +53,7 @@
       <div class="col-md-6">
         <div class="panel panel-default">
           <div class="panel-body">
-              <img src="https://i.imgur.com/CgSj6pu.jpg" style="width:55%; margin:0 auto; display:block; border-radius: 50%;">
+              <img src=<%= item.img %> style="width:55%; margin:0 auto; display:block; border-radius: 50%;">
               <center>
               <h1> About: </h1>
               <h4>Breed: <%= item.breed %> </h4>
@@ -113,15 +113,15 @@
             <h2><center>Enter the fields below to post an update.</center></h2>
             <div class="form-group">
               <label for="update[title]">Title:</label>
-              <input type="text" class="form-control" id="title" name="update[title]">
+              <input type="text" class="form-control" id="title" name="title">
             </div>
             <div class="form-group">
-              <label for="update[date]">Date:</label>
-              <input type="date" class="form-control" id="date" name="update[date]">
+              <label for="updateDate">Date:</label>
+              <input type="date" class="form-control" id="updateDate" name="updateDate">
             </div>
             <div class="form-group">
-              <label for="update[desc]">Description::</label>
-              <textarea class="form-control" id="desc" name="update[desc]"></textarea>
+              <label for="desc">Description::</label>
+              <textarea class="form-control" id="desc" name="desc"></textarea>
             </div>
 
           </form>
@@ -143,13 +143,6 @@
           <button type="button" class="close" data-dismiss="modal">&times;</button>
           <h4 class="modal-title">Edit Doggo</h4>
         </div>
-<<<<<<< HEAD
-          <div class="modal-body">
-            <form action="/editDoggo" method="POST">
-                    <div class="form-group">
-                      <label for="name">Name:</label>
-                      <input type="text" class="form-control" id="name" name="name">
-=======
         <div class="modal-body">
           <form action="/editDoggo" method="POST">
                   <div class="form-group">
@@ -170,7 +163,6 @@
                     <div class="form-group">
                       <label for="breed">Breed:</label>
                       <input type="text" class="form-control" id="breed" name="breed">
->>>>>>> parent of cf916e5... working update
                     </div>
                       <div class="form-group">
                         <label for="breed">Breed:</label>
